# capital_state_client

./: Cargo.toml
assets/textures/: paddles.ron  players.ron
assets/ui/: game_over.ron  menu.ron  pause.ron
config/: display.ron  input.ron
src/: main.rs
src/resource/: mod.rs  motion.rs  network_payload.rs  paddle.rs  player.rs
src/state/: game_over.rs  game_play.rs  menu.rs  mod.rs  pause.rs  utils.rs
src/system/: entity_packet_system.rs  mod.rs  movement_system.rs  network_receiver.rs  paddle_system.rs  player_control_system.rs
