[package]
name = "capital_state_client"
version = "0.1.0"
authors = ["oOBoomberOo <boombercmd123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"

[dependencies.amethyst]
version = "0.13.2"
features = ["vulkan"]